--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,2 @@
-# Core project dependencies
-lxml>=4.9.0
-pytest>=7.0.0
-
-# Upgraded to versions that address known vulnerabilities reported by the scanner
-urllib3>=2.5.0
-requests>=2.32.4
-twisted>=24.7.0
-setuptools>=78.1.1
-idna>=3.7
-cryptography>=42.0.5
-configobj>=5.0.9
-certifi>=2024.7.4
-jinja2>=3.1.6
+lxml
+pytest
